Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- cpsinstall creates a CMF caching_policy_manager instance with a default policy
  that caches objects of type 'Filesystem Image' for one hour (HTTP headers)
Bug fixes:
~~~~~~~~~~
- Fixed the cache of the portlet_contact_info custom portlet so that the
  portlet provide a correct accessibility link for each virtual hosts.
- Fixed security hole in forgotten password reset processing.
- the document portlet and the subfolders in the main content area were
  displayed along with the portal forms.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Less restrictive permission check to allow
  a user to use the form in folder_contents
  was: 'Delete Folder', now is: 'Modify Portal Content'
  because the form button now handles correctly
  each perm.
- Removed obsolete widget types registration.
- tune #1133: getSortedContentTypes.py is too slow
- effective_date gets automatically updated at publish time (in
  section_content_wf) if no specific dates were set by the user
- CPSDefault.utils provides a fast filterContents function that replace the one
  in skins/cps_default/filterContents.py, the interface is changed a bit:
  * you must supply the `context` as the first parameter
  * `displayed` is renamed `filter_ptypes` and default is None instead of ['']
  * `sort_by` is renamed into `sort_on` and default is None
  * `direction` is renamed into `sort_order`
- added deprecation information for CPSBoxes modules.
- the "Edit this text" link on the welcome message goes to the portlet editor.