@@ -31,3 +31,5 @@ New internal features:
   * `direction` is renamed into `sort_order`
 - added deprecation information for CPSBoxes modules.
 - the "Edit this text" link on the welcome message goes to the portlet editor.
+- added a temporary "folder contents" portlet in the main part of the screen
+  until there is a more extended view for it (cf. #573)
